# slide-generator

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_AGENT_SDK.md  CONTRIBUTING.md  LICENSE  Makefile  PLUGIN_IMPLEMENTATION_PLAN.md  PLUGIN_TEST_PLAN.md  PRIORITY_3_PLAN.md  PROJECT_STRUCTURE.md  README.md  README_AGENT_SDK.md  REFACTORING_SUMMARY.md  RELEASE_SUMMARY.md  SECURITY.md  SETUP_APIS.md  TEST_DATA_SUMMARY.md  advanced-evaluation.md  advanced-plan.md  generate_images_for_slides.py  plugin-plan.md  pres-template.md  prompt_config.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test_carburetor_research.py  test_content_development.py  test_production_enhancements.py
.claude/: README.md
.claude-plugin/: README.md  plugin.json
.claude/commands/: ci-checks.md  slide-build.md  slide-gen.md  slide-health.md  slide-outline.md  slide-research.md
.claude/skills/test-pres-gen/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  FIXES_SUMMARY.md  INSPECTION_REPORT.md  MIGRATION.md  PLAN.md  REGENERATE_SKILLS.md  TEST_RESULTS.md  workflow-diagram.md
docs/api/: README.md
docs/architecture/: ADR-001-dual-api-strategy.md  ADR-002-skill-library-boundary.md  ADR-003-state-management.md  CONSOLIDATION.md  README.md
examples/: README.md
examples/sample-workflow/: 1-research.json  2-outline.md  3-content.md
plugin/: README.md  __init__.py  base_skill.py  checkpoint_handler.py  cli.py  config_manager.py  config_schema.json  plugin_manifest.json  py.typed  skill_registry.py  types.py  workflow_orchestrator.py
plugin/commands/: __init__.py  build.py  draft.py  from_draft.py  from_images.py  from_outline.py  from_research.py  generate_images.py  outline.py  research.py  resume.py  status.py
plugin/lib/: __init__.py  analytics.py  async_claude_client.py  async_gemini_client.py  async_workflow.py  citation_manager.py  claude_agent.py  claude_client.py  connection_pool.py  content_extractor.py  content_generator.py  cost_estimator.py  graphics_validator.py  health_check.py  json_utils.py  logging_config.py  metrics.py  progress.py  progress_reporter.py  quality_analyzer.py  rate_limiter.py  real_search_data.py  resilient_client.py  retry.py  secure_config.py  state_detector.py  structured_logger.py  validators.py  web_search.py
plugin/lib/presentation/: __init__.py  assembler.py  image_generator.py  parser.py  refinement_engine.py  slide_exporter.py  template_base.py  type_classifier.py  visual_validator.py
plugin/skills/: __init__.py  insight_extraction_skill.py  markdown_parsing_skill.py  outline_skill.py  powerpoint_assembly_skill.py  refinement_skill.py  research_assistant_skill.py  research_skill.py  validation_skill.py
plugin/skills/assembly/: __init__.py  markdown_parsing_skill.py  powerpoint_assembly_skill.py  refinement_skill.py
plugin/skills/content/: __init__.py  content_drafting_skill.py  content_optimization_skill.py  outline_skill.py
plugin/skills/images/: __init__.py  validation_skill.py
plugin/skills/research/: __init__.py  insight_extraction_skill.py  research_assistant_skill.py  research_skill.py
plugin/templates/: __init__.py
plugin/templates/cfa/: template.py
plugin/templates/stratfield/: template.py
presentation-skill/: CLI_USAGE.md  DEPRECATED.md  SKILL.md  generate_presentation.py
presentation-skill/lib/: __init__.py  assembler.py  image_generator.py  parser.py  refinement_engine.py  visual_validator.py
presentation-skill/templates/: __init__.py
presentation-skill/templates/cfa/: template.py
presentation-skill/templates/stratfield/: template.py
scripts/: README.md  generate_images_for_slides.py
scripts/primary/: generate_images.py  generate_prompts.py
templates/: cfa_style.json  example-presentation.md  image_prompt_template.json  stratfield_style.json
tests/: BRANDED_IMAGE_FIX_PLAN.md  BRANDED_IMAGE_TEST_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  FIX_PLAN.md  README.md  check_parser.py  conftest.py  detailed_inspect.py  inspect_branded.py  inspect_presentations.py  quick_inspect.py  test_generation.py
tests/fixtures/: README.md  sample_outline.json  sample_presentation.md  sample_research.json  test_prompts.json
tests/helpers/: __init__.py  check_parser.py  detailed_inspect.py  inspect_branded.py  inspect_fixed.py  inspect_presentations.py  quick_inspect.py
tests/integration/: __init__.py  conftest.py  test_branded_generation.py  test_carburetor_research.py  test_content_development.py  test_generation.py  test_production_enhancements.py
tests/unit/: conftest.py  test_analytics.py  test_assembler.py  test_base_skill.py  test_checkpoint_handler.py  test_claude_agent.py  test_cli.py  test_config_manager.py  test_content_drafting_skill.py  test_content_generator.py  test_content_optimization_skill.py  test_graphics_validator.py  test_health_check.py  test_image_generator.py  test_logging_config.py  test_markdown_parsing_skill.py  test_metrics.py  test_powerpoint_assembly_skill.py  test_presentation_parser.py  test_progress.py  test_progress_reporter.py  test_quality_analyzer.py  test_rate_limiter.py  test_refinement_engine.py  test_refinement_skill.py  test_research_libraries.py  test_research_skills.py  test_resilient_client.py  test_retry.py  test_secure_config.py  test_skill_registry.py  test_slide_exporter.py  test_structured_logger.py  test_templates.py  test_type_classifier.py  test_validation_skill.py  test_validators.py  test_visual_validator.py  test_workflow_orchestrator.py
